Fixed Problem With Text Overlapping

--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,7 @@ h1 {
     font-size: 42px;
     line-height: 1em;
     margin-left: 1.5em;
+    margin-right: 0.5em;
 
     overflow: hidden;
 
@@ -158,7 +159,7 @@ h1 {
 
 .about {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 
     display: flex;
     flex-direction: column;
